--- a/medical-equipments/imaging_solutions/pediatric_bone_age_x-ray_system.html
+++ b/medical-equipments/imaging_solutions/pediatric_bone_age_x-ray_system.html
@@ -29,14 +29,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="../custom/all.css" />
-    <link rel="stylesheet" href="../custom/equipments.css" />
+    <link rel="stylesheet" href="../../custom/all.css" />
+    <link rel="stylesheet" href="../../custom/equipments.css" />
   </head>
 
   <body>
     <!-- 1212 navbar↓ -->
     <nav id="navbarEquipments" class="navbar navbar-expand-lg bg-body-tertiary position-sticky top-0 px-3 mb-3 shadow-sm" style="background-color: #fff;z-index: 2">
-      <a class="navbar-brand" href="../index.html"> <img src="../images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
+      <a class="navbar-brand" href="../../index.html"> <img src="../../images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
       <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -44,51 +44,51 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item nav-pills">
-            <a class="nav-link px-3" aria-current="page" href="../index.html">Home</a>
+            <a class="nav-link px-3" aria-current="page" href="../../index.html">Home</a>
           </li>
           <li class="nav-item nav-pills dropdown" style="color: #595857">
-            <a class="nav-link px-3 active dropdown-toggle" href="../medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
+            <a class="nav-link px-3 active dropdown-toggle" href="../../medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
             <ul class="dropdown-menu p-2" aria-labelledby="navbarDropdown" style="color: #595857;">
               <li>
                 <p class="dropdown-item fw-bold mb-0" style="color: #ff8500">Medical Devices And Equipments</p>
               </li>
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Imaging_Solutions"><i class="bi bi-arrow-right-short"></i>Imaging Solutions</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Imaging_Solutions"><i class="bi bi-arrow-right-short"></i>Imaging Solutions</a>
               </li>
 
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Patient_Analytics_Solutions"><i class="bi bi-arrow-right-short"></i>Patient Analytics Solutions</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Patient_Analytics_Solutions"><i class="bi bi-arrow-right-short"></i>Patient Analytics Solutions</a>
               </li>
               <li><hr class="dropdown-divider" /></li>
               <li>
                 <p class="dropdown-item fw-bold mb-0" style="color: #ff8500">Healthcare IT</p>
               </li>
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Mobile_Nursing_Station"><i class="bi bi-arrow-right-short"></i>Mobile Nursing Station</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Mobile_Nursing_Station"><i class="bi bi-arrow-right-short"></i>Mobile Nursing Station</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Base_Telescoping"><i class="bi bi-arrow-right-short"></i>Base Telescoping</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Base_Telescoping"><i class="bi bi-arrow-right-short"></i>Base Telescoping</a>
               </li>
               <li><hr class="dropdown-divider" /></li>
               <li>
                 <a class="dropdown-item fw-bold" style="color: #ff8500" href="#">Medical Supplies</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Masks"><i class="bi bi-arrow-right-short"></i>Masks</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Masks"><i class="bi bi-arrow-right-short"></i>Masks</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Gloves"><i class="bi bi-arrow-right-short"></i>Gloves</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Gloves"><i class="bi bi-arrow-right-short"></i>Gloves</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Alcohol_Prep_Pads"><i class="bi bi-arrow-right-short"></i>Alcohol Prep Pads</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Alcohol_Prep_Pads"><i class="bi bi-arrow-right-short"></i>Alcohol Prep Pads</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Personal_Protective_Equipment"><i class="bi bi-arrow-right-short"></i>Personal Protective Equipment</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Personal_Protective_Equipment"><i class="bi bi-arrow-right-short"></i>Personal Protective Equipment</a>
               </li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link px-3" href="../about-us.html">About</a>
+            <a class="nav-link px-3" href="../../about-us.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link px-3" href="mailto:support@medalliance.com.tw">Contact Us</a>
@@ -105,17 +105,22 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Imaging_Solutions/Handheld_Ultrasound-01.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Imaging_Solutions/Pediatric_Bone_Age_X-ray_System-01.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Imaging_Solutions/Handheld_Ultrasound-02.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Imaging_Solutions/Pediatric_Bone_Age_X-ray_System-02.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Imaging_Solutions/Handheld_Ultrasound-03.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Imaging_Solutions/Pediatric_Bone_Age_X-ray_System-03.jpg');"></div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div>
+                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Imaging_Solutions/Pediatric_Bone_Age_X-ray_System-04.jpg');"></div>
                 </div>
               </div>
             </div>
@@ -126,50 +131,57 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Imaging_Solutions/Handheld_Ultrasound-01.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Imaging_Solutions/Pediatric_Bone_Age_X-ray_System-01.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Imaging_Solutions/Handheld_Ultrasound-02.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Imaging_Solutions/Pediatric_Bone_Age_X-ray_System-02.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Imaging_Solutions/Handheld_Ultrasound-03.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Imaging_Solutions/Pediatric_Bone_Age_X-ray_System-03.jpg');"></div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div>
+                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Imaging_Solutions/Pediatric_Bone_Age_X-ray_System-04.jpg');"></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
         <div class="col-12 col-sm-6">
-          <h2 class="mb-3 fw-bold " style="color:#294076">Handheld Ultrasound</h2>
+          <h2 class="mb-3 fw-bold " style="color:#294076">Pediatric Bone Age X-ray System</h2>
           <div class="px-4" style="color:#595857">
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Whole-body scanning</p>
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Impressive image quality</p>
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Auto-measurement for obstetrics</p>
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Wireless connection</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Lower Dose</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Easy to Go</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Current Applications</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Future Applications</p>
           </div>
         </div>
       </div>
       <div class="py-5" style="background-color: #2940760c;border-radius: 12px;">
         <div class="row">
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Continuous Power in Hand</h3>
-            <p class="p-color-bk80">- B mode</p>
-            <p class="p-color-bk80">- M mode</p>
-            <p class="p-color-bk80">- Color Flow</p>
-            <p class="p-color-bk80">- Power Doppler</p>
-            <p class="p-color-bk80">- Pulsed Wave Doppler</p>
+            <h3 class="h-color-bk80 fw-bold fs-5">Lower Dose</h3>
+            <p class="p-color-bk80">80% reduce the exposure of radiation.</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Wireless & Handheld Ultrasound Imaging System</h3>
-            <p class="p-color-bk80">- 4 hours battery life</p>
-            <p class="p-color-bk80">- 15+ presets & 30+ advanced parameters</p>
-            <p class="p-color-bk80">- Full scanning mode</p>
-            <p class="p-color-bk80">- Fast connection on Android & iOS</p>
-            <p class="p-color-bk80">- DICOM 3.0 supported</p>
+            <h3 class="h-color-bk80 fw-bold fs-5">Easy to Go</h3>
+            <p class="p-color-bk80">Close shielding protection can exposure anywhere.</p>
+          </div>
+          <div class="hrStyle-common mb-4"></div>
+          <div class="col-10 mx-auto mb-2">
+            <h3 class="h-color-bk80 fw-bold fs-5">Current Applications</h3>
+            <p class="p-color-bk80">BoneAge / Fracture</p>
+          </div>
+          <div class="hrStyle-common mb-4"></div>
+          <div class="col-10 mx-auto mb-2">
+            <h3 class="h-color-bk80 fw-bold fs-5">Future Applications</h3>
+            <p class="p-color-bk80">Bone Density / Gout</p>
           </div>
         </div>
       </div>
@@ -180,7 +192,7 @@
       <div class="container-xxl">
         <div class="d-flex flex-column flex-lg-row justify-content-center align-items-center border-bottom border-secondary p-3">
           <div class="mb-3 mb-lg-0 me-lg-3">
-            <img src="../images/medalliance-col.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." />
+            <img src="../../images/medalliance-col.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." />
           </div>
           <div class="d-flex flex-column">
             <div class="d-flex flex-column flex-lg-row">
