--- a/medical-equipments/patient_analytics_solutions/brain_ct_ai_analytic.html
+++ b/medical-equipments/patient_analytics_solutions/brain_ct_ai_analytic.html
@@ -29,14 +29,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="../custom/all.css" />
-    <link rel="stylesheet" href="../custom/equipments.css" />
+    <link rel="stylesheet" href="../../custom/all.css" />
+    <link rel="stylesheet" href="../../custom/equipments.css" />
   </head>
 
   <body>
     <!-- 1212 navbar↓ -->
     <nav id="navbarEquipments" class="navbar navbar-expand-lg bg-body-tertiary position-sticky top-0 px-3 mb-3 shadow-sm" style="background-color: #fff;z-index: 2">
-      <a class="navbar-brand" href="../index.html"> <img src="../images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
+      <a class="navbar-brand" href="../../index.html"> <img src="../../images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
       <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -44,51 +44,51 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item nav-pills">
-            <a class="nav-link px-3" aria-current="page" href="../index.html">Home</a>
+            <a class="nav-link px-3" aria-current="page" href="../../index.html">Home</a>
           </li>
           <li class="nav-item nav-pills dropdown" style="color: #595857">
-            <a class="nav-link px-3 active dropdown-toggle" href="../medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
+            <a class="nav-link px-3 active dropdown-toggle" href="../../medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
             <ul class="dropdown-menu p-2" aria-labelledby="navbarDropdown" style="color: #595857;">
               <li>
                 <p class="dropdown-item fw-bold mb-0" style="color: #ff8500">Medical Devices And Equipments</p>
               </li>
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Imaging_Solutions"><i class="bi bi-arrow-right-short"></i>Imaging Solutions</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Imaging_Solutions"><i class="bi bi-arrow-right-short"></i>Imaging Solutions</a>
               </li>
 
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Patient_Analytics_Solutions"><i class="bi bi-arrow-right-short"></i>Patient Analytics Solutions</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Patient_Analytics_Solutions"><i class="bi bi-arrow-right-short"></i>Patient Analytics Solutions</a>
               </li>
               <li><hr class="dropdown-divider" /></li>
               <li>
                 <p class="dropdown-item fw-bold mb-0" style="color: #ff8500">Healthcare IT</p>
               </li>
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Mobile_Nursing_Station"><i class="bi bi-arrow-right-short"></i>Mobile Nursing Station</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Mobile_Nursing_Station"><i class="bi bi-arrow-right-short"></i>Mobile Nursing Station</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Base_Telescoping"><i class="bi bi-arrow-right-short"></i>Base Telescoping</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Base_Telescoping"><i class="bi bi-arrow-right-short"></i>Base Telescoping</a>
               </li>
               <li><hr class="dropdown-divider" /></li>
               <li>
                 <a class="dropdown-item fw-bold" style="color: #ff8500" href="#">Medical Supplies</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Masks"><i class="bi bi-arrow-right-short"></i>Masks</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Masks"><i class="bi bi-arrow-right-short"></i>Masks</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Gloves"><i class="bi bi-arrow-right-short"></i>Gloves</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Gloves"><i class="bi bi-arrow-right-short"></i>Gloves</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Alcohol_Prep_Pads"><i class="bi bi-arrow-right-short"></i>Alcohol Prep Pads</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Alcohol_Prep_Pads"><i class="bi bi-arrow-right-short"></i>Alcohol Prep Pads</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../medical-equipments.html#Personal_Protective_Equipment"><i class="bi bi-arrow-right-short"></i>Personal Protective Equipment</a>
+                <a class="dropdown-item" href="../../medical-equipments.html#Personal_Protective_Equipment"><i class="bi bi-arrow-right-short"></i>Personal Protective Equipment</a>
               </li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link px-3" href="../about-us.html">About</a>
+            <a class="nav-link px-3" href="../../about-us.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link px-3" href="mailto:support@medalliance.com.tw">Contact Us</a>
@@ -105,24 +105,10 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Imaging_Solutions/Portable_X-ray_System-01.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Patient_Analytics_Solutions/Brain_CT_AI_Analysis.webp');"></div>
                 </div>
               </div>
-              <div class="swiper-slide">
-                <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Imaging_Solutions/Portable_X-ray_System-02.jpg');"></div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Imaging_Solutions/Portable_X-ray_System-03.jpg');"></div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Imaging_Solutions/Portable_X-ray_System-04.jpg');"></div>
-                </div>
-              </div>
+              
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
@@ -131,57 +117,51 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip " style="background-image: url('../images/medical-equipments/Imaging_Solutions/Portable_X-ray_System-01.jpg');"></div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Imaging_Solutions/Portable_X-ray_System-02.jpg');"></div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Imaging_Solutions/Portable_X-ray_System-03.jpg');"></div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Imaging_Solutions/Portable_X-ray_System-04.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Patient_Analytics_Solutions/Brain_CT_AI_Analysis.webp');"></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
         <div class="col-12 col-sm-6">
-          <h2 class="mb-3 fw-bold " style="color:#294076">Portable X-ray System</h2>
+          <h2 class="mb-3 fw-bold " style="color:#294076">Brain CT AI Analytic</h2>
           <div class="px-4" style="color:#595857">
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Lower Dose</p>
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Easy to Carry</p>
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>All Kinds of Scenario</p>
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>CNT X-ray Tube</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Provide a detailed analysis of critical findings on brain CT images to support physicians making clinical decisions.</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Professional DICOM viewer enables doctors to view the CT images with the Al-marking.</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Provides multiple ways to integrate with the hospital’s system, sending out notification in a timely manner.</p>
           </div>
         </div>
       </div>
       <div class="py-5" style="background-color: #2940760c;border-radius: 12px;">
         <div class="row">
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">CNT X-ray Tube</h3>
-            <p class="p-color-bk80">Use Carbon nanotube (CNT) as cold cathode to replace the conventional heated filament</p>
+            <h3 class="h-color-bk80 fw-bold fs-5">AnayIsis Report</h3>
+            <p class="p-color-bk80">Provide a detailed analysis of critical findings on brain CT images to support physicians making clinical decisions.</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Easy to Carry</h3>
-            <p class="p-color-bk80">Portable machine with optional bracket system.</p>
+            <h3 class="h-color-bk80 fw-bold fs-5">Professional DICOM Viewer</h3>
+            <p class="p-color-bk80">Professional DICOM viewer enables doctors to view the CT images with the Al-marking and grasp a more comprehensive understanding of their patients.</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">All Kinds of Scenario</h3>
-            <p class="p-color-bk80">First extremities and chest screening on the market.</p>
+            <h3 class="h-color-bk80 fw-bold fs-5">Notification</h3>
+            <p class="p-color-bk80">Provides multiple ways to integrate with the hospital's system, sending out notification in a timely manner.</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Tele-medicine applicable</h3>
-            <!-- <p class="p-color-bk80">Provides multiple ways to integrate with the hospital's system, sending out notification in a timely manner.</p> -->
+            <h3 class="h-color-bk80 fw-bold fs-5">Prioritization</h3>
+            <p class="p-color-bk80">Automatically prioritizes patient list by the severity of their conditions and alerts the physicians for acute care.</p>
+          </div>
+          <div class="hrStyle-common mb-4"></div>
+          <div class="col-10 mx-auto mb-2">
+            <h3 class="h-color-bk80 fw-bold fs-5">ICH Detection and Quantification</h3>
+            <p class="p-color-bk80">Brain CT AI Analytic is able to identify intracranial hemorrhage with less than 1 cc within 30 secs along with ICH subtypes and regions.</p>
+          </div>
+          <div class="hrStyle-common mb-4"></div>
+          <div class="col-10 mx-auto mb-2">
+            <h3 class="h-color-bk80 fw-bold fs-5">Other Critical Detection and Quantification</h3>
+            <p class="p-color-bk80">Brain CT AI Analytic provides additional information as midline shift, Ischemic Stroke, ICH Score and Skull/facial fracture to further support physicians.</p>
           </div>
         </div>
       </div>
